bug(welcome-mat-overflow): enable custom info content, test out different content scenarios, ensure proper overflow

--- a/ui/components/welcome-mat/base/_index.scss
+++ b/ui/components/welcome-mat/base/_index.scss
@@ -48,8 +48,7 @@
  * @restrict .slds-welcome-mat .slds-modal__content
  */
 .slds-welcome-mat__content {
-  min-height: 600px;
-  max-height: 90%;
+  min-height: $welcome-mat-min-height;
 }
 
 /**
@@ -60,10 +59,8 @@
  */
 .slds-welcome-mat__info {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 0 $spacing-xx-large $welcome-mat-spacing-info;
-  text-align: center;
+  overflow: auto;
+  padding: $spacing-medium $spacing-xx-large $welcome-mat-spacing-info;
   color: $welcome-mat-text-color-info;
   background-image: url($welcome-mat-background-image-info);
   background-position: bottom center;
@@ -73,10 +70,21 @@
 }
 
 /**
+ * @summary Content container for the informational side of the Welcome Mat. Centers in container space.
+ *
+ * @selector .slds-welcome-mat__info-content
+ * @restrict .slds-welcome-mat__info div
+ */
+.slds-welcome-mat__info-content {
+  margin: auto;
+  text-align: center;
+}
+
+/**
  * @summary Title element for the informational side of the Welcome Mat
  *
  * @selector .slds-welcome-mat__info-title
- * @restrict .slds-welcome-mat__info h2
+ * @restrict .slds-welcome-mat__info-content h2
  */
 .slds-welcome-mat__info-title {
   margin-bottom: $spacing-large;
@@ -86,20 +94,30 @@
 }
 
 /**
- * @summary Description element for the informational side of the Welcome Mat
+ * @summary Description container for the informational side of the Welcome Mat
  *
  * @selector .slds-welcome-mat__info-description
- * @restrict .slds-welcome-mat__info p
+ * @restrict .slds-welcome-mat__info-content div
  */
 .slds-welcome-mat__info-description {
   margin-bottom: $spacing-large;
 }
 
 /**
+ * @summary Description container for the informational side of the Welcome Mat
+ *
+ * @selector .slds-welcome-mat__info-description p
+ * @restrict .slds-welcome-mat__info-description p
+ */
+.slds-welcome-mat__info-description p {
+  margin-bottom: $spacing-medium;
+}
+
+/**
  * @summary Text description of walkthrough progress
  *
  * @selector .slds-welcome-mat__info-progress
- * @restrict .slds-welcome-mat__info div
+ * @restrict .slds-welcome-mat__info-content div
  */
 .slds-welcome-mat__info-progress {
   margin-bottom: $spacing-medium;
